tests/ui_board/snapshots/ui_board__first_run__standalone_practice_board_wide@portable.snap
---
source: tests/ui_board/first_run.rs
assertion_line: 47
expression: "snapshot(FirstRunEnvironment::Standalone, 120, 30, 5,)"
---
SIZE 120x30

TEXT
00││
01││
02│  Edit the focused thought using its current shortcut in Help. Press Esc to return to board mode.│
03││
04│  - Use Newline to continue this unordered list. Use Delete logical line to remove this line. Use Delete sentence to│
05│  remove this sentence.│
06│  ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
07││
08│  Choose New in the footer to create a thought, or paste in board mode to create one from the pasted text. Choose Copy│
09│  to copy the focused thought.│
10││
11│  In edit mode, type $name, /name, or supported @name to complete discovered local invocations.│
12│  ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
13││
14│  Move focus between thoughts, select, delete, and undo using your current bindings. Open Shortcuts in the footer to│
15│  see the resolved keys for this context. Commands provides additional actions.│
16│  ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
17││
18│  Proqi works on its own. Herdr adds verified adjacent submission. Use Submit to submit and remove, or Submit & keep to│
19│  retain the thought. Current shortcuts appear in the footer and Help. Learn more at https://herdr.dev│
20│  ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
21││
22│⋮ Use Select all, then Delete in board mode to delete this entire practice board. The footer and Help show your current│
23│  bindings, including custom aliases.│
24││
25│                                                      + New thought│
26││
27│  proqi-ui-first-run│
28│  6 thoughts · board · saved│
29│  n New   Ctrl+C/y Copy Ctrl+X/x Cut d/Del  Space Select Ctrl+Z/u Undo / Search  : Commands  ? Shortcuts│

STYLE RUNS
0: 0-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
1: 0-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
2: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-68 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 69-71 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=BOLD | 72-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
3: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
4: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
5: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
6: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-119 fg=Rgb(42, 37, 32) bg=Rgb(15, 13, 10) mod=NONE
7: 0-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
8: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
9: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
10: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
11: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
12: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-119 fg=Rgb(42, 37, 32) bg=Rgb(15, 13, 10) mod=NONE
13: 0-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
14: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
15: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
16: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-119 fg=Rgb(42, 37, 32) bg=Rgb(15, 13, 10) mod=NONE
17: 0-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
18: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
19: 0-0 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 1-84 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 85-101 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=UNDERLINED | 102-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
20: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-119 fg=Rgb(42, 37, 32) bg=Rgb(15, 13, 10) mod=NONE
21: 0-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
22: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-119 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
23: 0-0 fg=Rgb(250, 250, 248) bg=Rgb(45, 106, 79) mod=BOLD | 1-119 fg=Rgb(232, 228, 223) bg=Rgb(39, 40, 48) mod=NONE
24: 0-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
25: 0-53 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 54-54 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 55-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
26: 0-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
27: 0-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
28: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-117 fg=Rgb(176, 169, 160) bg=Rgb(15, 13, 10) mod=NONE | 118-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
29: 0-1 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 2-2 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 3-9 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 10-17 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 18-23 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 24-31 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 32-36 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 37-41 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 42-43 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 44-48 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 49-56 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 57-64 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 65-70 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 71-71 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 72-80 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 81-81 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 82-92 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE | 93-93 fg=Rgb(112, 214, 155) bg=Rgb(15, 13, 10) mod=NONE | 94-119 fg=Rgb(232, 228, 223) bg=Rgb(15, 13, 10) mod=NONE
